feat: bioservant origin improvements, tooltip and concepts improvements

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1242,15 +1242,15 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_unemployed_opportunistic:0 "Opportunistic Scavenger"
 	trait_tec_unemployed_opportunistic_desc:0 "§LThis species consecreate part of their free time to the obtaining of any riches they can find around.§!"
-	trait_tec_unemployed_opportunistic_effect:0 "Unemployed £pop£ Pops produce §G+1§! $tec_loc_basic_resources$ or §G+0.25§! $tec_loc_alloys$ depending on the planet §HClimate§! or §HType§!\nUnemployed Pop Amenities Usage: §R+0.1§!\n\n§HProduction applies to £job_livestock£ $job_livestock_plural$ pops§!\n"
+	trait_tec_unemployed_opportunistic_effect:0 "Unemployed £pop£ Pops produce §G+1§! $tec_loc_basic_resources$ or §G+0.25§! $tec_loc_alloys$ depending on the planet §HClimate§! or §HType§!\nUnemployed Pop Amenities Usage: §R+0.1§!\n\n§HProduction doubled for ['concept_tec_effect_livestock_alias_icon']\n"
 
 	trait_tec_unemployed_subsistence:0 "Innate Subsistence"
 	trait_tec_unemployed_subsistence_desc:0 "§LWhen it comes to adquiring substenance, this species tries their best to gather, harvest and collect anything to survive.§!"
-	trait_tec_unemployed_subsistence_effect:0 "$mod_planet_pops_unemployed_food_produces_add$: §G+1§!\nUnemployed Pop Amenities Usage: §R+0.1§!\n\n§HProduction applies to £job_livestock£ $job_livestock_plural$ pops§!"
+	trait_tec_unemployed_subsistence_effect:0 "$mod_planet_pops_unemployed_food_produces_add$: §G+1§!\nUnemployed Pop Amenities Usage: §R+0.1§!\n\n§HProduction doubled for ['concept_tec_effect_livestock_alias_icon']"
 
 	trait_tec_unemployed_subsistence_lithoid:0 "Innate Mineralization"
 	trait_tec_unemployed_subsistence_lithoid_desc:0 "$trait_tec_unemployed_subsistence_desc$"
-	trait_tec_unemployed_subsistence_lithoid_effect:0 "$mod_planet_pops_unemployed_minerals_produces_add$: §G+1§!\nUnemployed Pop Amenities Usage: §R+0.1§!\n\n§HProduction applies to £job_livestock£ $job_livestock_plural$ pops§!"
+	trait_tec_unemployed_subsistence_lithoid_effect:0 "$mod_planet_pops_unemployed_minerals_produces_add$: §G+1§!\nUnemployed Pop Amenities Usage: §R+0.1§!\n\n§HProduction doubled for ['concept_tec_effect_livestock_alias_icon']"
 
 	trait_tec_selective_equilibrium:0 "Evolutive Equilibrium"
 	trait_tec_selective_equilibrium_desc:0 "§LThe specific niches this species have evolved to fit drive the perfect balance between numbers and opportunity, caring their dependant and frail descendance with high attention, ensuring overall survival on the long term.§!"
