--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -372,3 +372,9 @@ slavery_livestock_tooltip:3 "§HLivestock§! Pops under ['concept_tec_right_opti
 	TRAIT_LITHOID_GASEOUS_BYPRODUCTS_EFFECT:1 "$mod_pop_category_normal_resources_exotic_gases_produces_add$: §G+$@lithoid_trait_resource_production$§!\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 	TRAIT_LITHOID_SCINTILLATING_EFFECT:1 "$mod_pop_category_normal_resources_rare_crystals_produces_add$: §G+$@lithoid_trait_resource_production$§!\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
 	TRAIT_LITHOID_VOLATILE_EXCRETIONS_EFFECT:1 "$mod_pop_category_normal_resources_volatile_motes_produces_add$: §G+$@lithoid_trait_resource_production$§!\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+
+inorganic_breath_tooltip:2 "\n\n§HProduction tripled for ['concept_tec_effect_livestock_alias_icon'] and ['concept_tec_effect_organic_batteries_alias_icon'] Jobs§!"
+
+concept_archaeostudies_desc: "- $tec_loc_hc_unlock_building$ ['building:building_archaeostudies_faculty']\n\n§L$tech_archaeostudies_desc$§!"
+
+concept_habitat_2_desc:1 "- $tec_loc_hc_unlock_building$ ['building:building_hab_major_capital']\n\n§L$tech_habitat_2_desc$§!"
