--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -99,7 +99,7 @@
 
 	trait_tec_perfectionist:0 "Perfectionist"
 	trait_tec_perfectionist_desc:0 "§LAnything this species produces has a undeniable mark on it and its quality; it's not only making the best, but doing it so it becomes the state of the art.§!\n"
-	TRAIT_TEC_PERFECTIONIST_EFFECT:0 "£alloys£ £consumer_goods£ Industrial resources from £job£ Jobs: §G+5%§!"
+	TRAIT_TEC_PERFECTIONIST_EFFECT:0 "£alloys£ £consumer_goods£ Industrial Resources from £job£ Jobs: §G+5%§!"
 
 	trait_tec_bioservant_perfectionist:0 "Bio-Perfectionist"
 	trait_tec_bioservant_perfectionist_desc:0 "§LAnything this species produces has a undeniable mark on it and its quality; it's not only making the best, but doing it so it becomes the state of the art.§!\n"
