--- a/localisation/english/zz_bioservant_l_english.yml
+++ b/localisation/english/zz_bioservant_l_english.yml
@@ -48,13 +48,13 @@
  tech_tec_bioservant_3_desc:0 "The most advanced strain of Bio-constructs known, which are faster, stronger and more durable than most non-created organic life. Their improved brains and cognitive abilities makes them fully capable of independent operations."
  
 
- tech_tec_bioservant_TITLE:0 "§YUnlocks feature:§! Bio-Grunts"
+ tech_tec_bioservant_TITLE:0 "§HUnlocks Feature:§! Bio-Grunts"
  tech_tec_bioservant_DESC:0 "Bio-Grunts are simple Bio-constructs, capable of accepting verbal commands but possess no true intelligence.\n\n§EWith the §Y$tech_tec_bioservant$§! technology, Bio-constructs are only capable of £pop_cat_worker£ Jobs§! Such as £job_technician£ £job_miner£ £job_farmer£ §YMenial§! or £job_clerk£ §YClerk§! Jobs.§!\n\n§YAll Bio-Constructs are capable of breeding on their own if allowed and can be grown or assembled. Designed Lifeforms with population controls may still be assembled.§!"
 
- tech_tec_bioservant_2_TITLE:0 "§YUnlocks feature:§! Bio-Drones"
+ tech_tec_bioservant_2_TITLE:0 "§HUnlocks Feature:§! Bio-Drones"
  tech_tec_bioservant_2_DESC:0 "Bio-Drones are more complex Bio-constructs, often they have personalities encoded into their DNA to better serve their masters as well as a limited self-awareness and a developed creativity.\n\n§EWith the §Y$tech_tec_bioservant_2$§! technology, Bio-constructs are capable of most £job£ §YPop Jobs§!, including §YSpecialist Jobs§! but are unable to perform £pop_cat_ruler£ §YRuler Jobs§!"
 
- tech_tec_bioservant_3_TITLE:0 "§YUnlocks feature:§! Bio-Servants"
+ tech_tec_bioservant_3_TITLE:0 "§HUnlocks Feature:§! Bio-Servants"
  tech_tec_bioservant_3_DESC:0 "Bio-Servants are very complex Bio-constructs, Their brains are complex enough to where they are fully self-aware if not sapient.\n\n§EWith the §Y$tech_tec_bioservant_3$§! technology, Bio-constructs are affected by §Y$tec_loc_happiness$§! and can potentially perform all types of £pop£ §YPop Jobs§! if allowed via policy.§!"
  
  tech_tec_bioservant_traits_1:0 "Bio-tailoring"
@@ -81,6 +81,12 @@
  # Traits
  trait_tec_bioservant:0 "Bio-Construct"
  trait_tec_bioservant_desc:0 "§LBio-Constructs are designed to capable of surviving in many different planetary conditions though they are not as hardy as machines however.§!"
+
+ trait_tec_auto_mod_bioservant: "$trait_auto_mod_biological$"
+ trait_tec_auto_mod_bioservant_desc: "$trait_auto_mod_biological_desc$"
+
+ trait_tec_sterile_pregame: "$trait_tec_sterile$"
+ trait_tec_sterile_pregame_desc: "$trait_tec_sterile_desc$"
 
  trait_tec_sterile:0 "Genophaged"
  trait_tec_sterile_desc:0 "§LThis species has been genetically engineered to be sterile.§!"
@@ -212,6 +218,7 @@ intelligent_bioservants_outlawed_name:0 "Intelligent Bioservants Outlawed"
 # species rights
  TEC_BIOSERVANTS_HAVE_RIGHTS:0 "$TRIGGER_FAIL$Bio-Constructs have §YCitizen Rights§!."
  TEC_BIOSERVANTS_ARE_OUTLAWED:0 "$TRIGGER_FAIL$Bio-Constructs are §ROutlawed§!."
+ TEC_BIOSERVANTS_NO_RIGHTS: "$TRIGGER_FAIL$Our §Y$bioservant_intelligence_policy$§! policy does not grant designed lifeforms §YCitizen Rights§!."
 
 
 no_bioservant_no_citizenship:0 "This species requires a bigger grade of §Yautonomy, self-consciousness and moral capacity§! to be recognised as a civilian. Meanwhile, they are just organic robots."
