--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2911,7 +2911,7 @@
 	concept_tec_tech_powered_exoskeletons_desc: "$concept_tec_tech_powered_exoskeletons_effect$\n\n§L$tech_powered_exoskeletons_desc$§!"
 
 	concept_tec_tech_robotic_workers: "£engineering£ $tech_robotic_workers$"
-	concept_tec_tech_robotic_workers_effect: "- §HUnlocks Feature:§! $feature_robots$"
+	concept_tec_tech_robotic_workers_effect: "- $tec_loc_hc_unlock_feature$ $feature_robots$\n- $tec_loc_hc_unlock_building$ ['building:building_robot_assembly_plant']"
 	concept_tec_tech_robotic_workers_desc: "$concept_tec_tech_robotic_workers_effect$\n\n§L$tech_robotic_workers_desc$§!"
 
 	concept_tec_tech_genome_mapping: "£society£$tech_genome_mapping$"
@@ -2919,11 +2919,11 @@
 	concept_tec_tech_genome_mapping_desc: "$concept_tec_tech_genome_mapping_effect$\n\n§L$tech_genome_mapping_desc$§!"
 
 	concept_tec_tech_gene_tailoring: "£society£ $tech_gene_tailoring$"
-	concept_tec_tech_gene_tailoring_effect: "- §HUnlocks Feature:§! $feature_modify_traits$\n- §HUnlocks Feature:§! $feature_pop_self_modification$\n- $mod_BIOLOGICAL_species_trait_points_add$: §G+2§!"
+	concept_tec_tech_gene_tailoring_effect: "- $tec_loc_hc_unlock_feature$ $feature_modify_traits$\n- $tec_loc_hc_unlock_feature$ $feature_pop_self_modification$\n- $mod_BIOLOGICAL_species_trait_points_add$: §G+2§!"
 	concept_tec_tech_gene_tailoring_desc: "$concept_tec_tech_gene_tailoring_effect$\n\n§L$tech_gene_tailoring_desc$§!"
 
 	concept_tec_tech_tec_bioservant: "£society£ $tech_tec_bioservant$"
-	concept_tec_tech_tec_bioservant_effect: "- $tech_tec_bioservant_TITLE$"
+	concept_tec_tech_tec_bioservant_effect: "- $tech_tec_bioservant_TITLE$\n- $tec_loc_hc_unlock_building$ ['building:building_tec_bioservant_plant_1']"
 	concept_tec_tech_tec_bioservant_desc: "$concept_tec_tech_tec_bioservant_effect$\n\n§L$tech_tec_bioservant_desc$§!"
 
 	concept_tec_tech_gene_expressions: "£society£ $tech_gene_expressions$"
