--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -306,6 +306,12 @@
 	tec_loc_espionage_bypass_desc:0 "$tec_loc_espionage_bypass$ is a value (%) of extra chance of overcoming target defenses and intelligence while executing a covert action on a planet or territory, delaying it's discovery until it's too late to react."
 
 
+
+	tec_loc_hc_unlock_feature: "§HUnlocks Feature:§!"
+	tec_loc_hc_unlock_building: "§HUnlocks Building:§!"
+	tec_loc_hc_unlock_mega: "§HUnlocks Megastructure:§!"
+	tec_loc_hc_unlock_trait: "§HUnlocks Trait:§!"
+
 # Situations and text icons
 # ------------------------------------------------------------
 	tec_icon_text_path_good:0 "This can lead to a §GPositive§! path."
