fix: smol loc fixes

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -119,7 +119,7 @@
 	tec_loc_pop_growth_icon: "£mod_pop_growth_speed£"
 
 	tec_loc_job_output: "£job£ Job Output"
-	tec_loc_organic_job_output: "£job£ Organic Job Output"
+	tec_loc_organic_job_output: "£job£ §YOrganic§! Job Output"
 
 	tec_loc_defense_army:0 "£defense_army£ Defense Army"
 	tec_loc_defense_armies:0 "£defense_army£ Defense Armies"
@@ -129,7 +129,7 @@
 	tec_loc_edict:0 "£edict£ Edict"
 	tec_loc_edicts:0 "£edict£ Edicts"
 	tec_loc_edict_funds_icon:0 "£mod_country_edict_fund_add£"
-	tec_loc_edict_funds:0 "$tec_loc_edict_funds_icon$  $MOD_COUNTRY_EDICT_FUND_ADD$"
+	tec_loc_edict_funds:0 "$tec_loc_edict_funds_icon$ $MOD_COUNTRY_EDICT_FUND_ADD$"
 	tec_loc_naval_cap: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$"
 	tec_loc_naval_capacity: "$tec_loc_naval_cap$"
 	tec_loc_navalcap_from_jobs:0 "$mod_pop_job_naval_mult$"
@@ -343,7 +343,7 @@
 	tec_processcap_icon: "£job_maintenance_drone£ Processing Capacity"
 	tec_processcap_text_title: "§HProcessing Capacity§!"
 	tec_processcap_text_icon_desc: "§E§HProcessing Capacity§! (£job_maintenance_drone£) represents the calculations done for handling and managing this empire.\n\nThe Processing Capacity is increased by £job_tec_ai_operator£ §YOperators§! and certain £building£ §YBuildings§!, or exchanged from §Y$tec_loc_research_resources$§!  efforts.§!"
- 
+
 	#TEC_PROCESSCAP_BAR_TOOLTIP: "§HProcessing Capacity§!\nThe actual amount of this resource is: §Y[root.tec_processcap_resource]§!/§Y[root.tec_processcap_max]§! $tec_processcap_icon$.\n\n$TEC_TEST_PROCESSCAP_CAP_DESC$"
 	#TEC_PROCESSCAP_BAR_CAP_DESC: "§EThe total amount of $tec_test_power_icon$ is altered by:§!\n+§G[root.tec_processcap_country]§! from Country Modifiers.\n+§G[root.tec_processcap_buildings]§! from Buildings.\n+§G[root.tec_processcap_jobs]§! from Jobs."
 
@@ -408,22 +408,22 @@
 	machinerf_nuked_tech_modifier:0 "§YUnlock feature:§! Anti-radiation exposure protocols."
 	machinerf_nuked_tech_modifier_desc:0 "All mechanic units will work at §G80% efficiency§! in Tomb Worlds."
 	#machinerf_nuked_tech_modifier_desc:1 "§B All mechanic units will work at 80% efficiency in Tomb Worlds. §"
- 
+
 
 #MODIFIER
 
 	machinerf_40_modifier:0 "Minimal efficiency"
 	machinerf_40_modifier_desc:0 "Machine interfaces on this planet have design flaws for operating in this environment. Efficiency is seriously reduced until we can be able to overcome that handicap.\n\nMachine pops on this planet work at §R50% efficiency§."
- 
+
 	machinerf_60_modifier:0 "Reduced efficiency"
 	machinerf_60_modifier_desc:0 "Our interfaces are now partially adapted to deal with the environment hazards, but new subroutines should be implemented.\n\nMachine pops on this planet work at §Y70% efficiency§."
- 
+
 	machinerf_80_modifier:0 "Near-Optimal efficiency"
 	machinerf_80_modifier_desc:0 "With some readjustments, interfaces can now operate at near full capacity on this planet.\n\nMachine pops on this planet work at §G90% efficiency§."
- 
+
 	machinerf_100_modifier:0 "Total efficiency"
 	machinerf_100_modifier_desc:0 "All units operational.\n\nMachine pops on this planet work at §B100% efficiency§!."
- 
+
 
 
 
@@ -432,50 +432,50 @@
 	tech_machinerf_dry:0 "Dry planet adaptation"
 	tech_machinerf_dry_desc:1 "We can implement dust filters, solar batteries and new coolant materials for making our units more operative in hot dry climates."
 	#tech_machinerf_dry_modifier_desc:0 "§Y All mechanic units will work at 60% efficiency in Desert, Arid and Savannah planets. §"
- 
+
 	tech_machinerf_wet:0 "Wet planet adaptation"
 	tech_machinerf_wet_desc:1 "By the design of new poly-alloys and flexible materials, we can overcome rust, short-circuit or biological danger in wet climates"
 	#tech_machinerf_wet_modifier_desc:0 "§Y All mechanic units will work at 60% efficiency in Ocean, Continental and Tropical planets. §"
- 
+
 	tech_machinerf_cold:0 "Cold planet adaptation"
 	tech_machinerf_cold_desc:1 "New vents and ceramic conducts redirecting heat from our units can help preventing joint freezing and bodywork cracking in cold climates"
 	#tech_machinerf_cold_modifier_desc:0 "§Y All mechanic units will work at 60% efficiency in Arctic, Tundra and Alpine planets. §"
- 
+
 	tech_machinerf_nano:0 "Environmental nanobots"
 	tech_machinerf_nano_desc:1 "Integrating nanobots in our production lines and units we can assure a constant maintenance, translating in increased efficiency."
 	#tech_machinerf_nano_modifier_desc:0 "§B All mechanic units will work at 80% efficiency in foreign environments, except tomb worlds. §"
- 
+
 	tech_machinerf_bio:0 "Omni-environment adaptation"
 	tech_machinerf_bio_desc:1 "By mimicking nature and using our processing capacity to create perfected designs, our units will be equipped to overcome every environmental hazard."
 	#tech_machinerf_bio_modifier_desc:0 "§B All mechanic units will work at 100% efficiency. §"
- 
+
 	tech_machinerf_nuked:0 "Tomb world adaptation"
 	tech_machinerf_nuked_desc:1 "Creating a layer of isolating materials we can overcome the dangers of radiation and acid rains in Tomb Worlds."
 	#tech_machinerf_nuked_modifier_desc:0 "§B All mechanic units will work at 100% efficiency in Tomb Worlds. §"
- 
+
 	tech_machinerf_nuked_ext:0 "Tomb world adaptation"
 	tech_machinerf_nuked_ext_desc:1 "Creating a layer of isolating materials we can overcome the dangers of radiation and acid rains in Tomb Worlds."
- 
- 
- 
- 
+
+
+
+
  #EVENTS
 
 	machinerf.100.name:0 "Environmental Issues"
 	machinerf.100.desc:0 "After the first test on newly created units at [Root.GetName], we have noticed some design flaws that are interfering with the normal operating patrons of our kind.\n\nSeems that our creators didn't design us keeping in mind other kind of environments, so we shall adapt ourselves."
 	machinerf.100.a: "We need a fast solution."
 	machinerf.100.a.tooltip:0 "Without the proper research, all units on [Root.GetName] are less efficient. We need to research new ways to improve."
- 
+
 	#machinerf.100.name:0 "Environment Issues"
 	#machinerf.100.desc:0 "After the first test on newly created units at [Root.GetName], we have noticed some design flaws that are interfering with the normal operating patrons of our kind.\n\nSeems that our creators didn't design us keeping in mind other kind of environments, so we shall adapt ourselves."
 	#machinerf.100.a.tooltip:0 "Without the proper research, all units on [Root.GetName] are less efficient. We need to research new ways to improve."
- 
- 
- 
- 
- 
+
+
+
+
+
  #TECH DESC
- 
+
 	tech_machinerf_dry_effect:0 "Desert Machine Performance: §Y+70%§!\nArid Machine Performance: §Y+70%§!\nSavannah Machine Performance: §Y+70%§!"
 	tech_machinerf_wet_effect:0 "Ocean Machine Performance: §Y+70%§!\nContinental Machine Performance: §Y+70%§!\nTropical Machine Performance: §Y+70%§!"
 	tech_machinerf_cold_effect:0 "Arctic Machine Performance: §Y+70%§!\nTundra Machine Performance: §Y+70%§!\nAlpine Machine Performance: §Y+70%§!"
@@ -484,7 +484,7 @@
 	tech_machinerf_bio_effect:0 "Machine Performance: §B+100%§! on every planet!\n"
 	tech_machinerf_nuked_effect:0 "Tomb World Machine Performance: §G+90%§!"
 	tech_machinerf_nuked_ext_effect:0 "Tomb World Machine Performance: §Y+70%§!"
- 
+
 	# tech_machinerf_dry_effect:0 "§YUnlock feature:§! §wSolar-dust filters\nAll mechanic units will work at §Y60% efficiency§! in §YDesert§, §YArid§! and §YSavannah§! planets."
 	# tech_machinerf_wet_effect:0 "§YUnlock feature:§! Oxidation regulators\nAll mechanic units will work at §Y60% efficiency§! in §GOcean§, §GContinental§! and §GTropical§! planets. "
 	# tech_machinerf_heat_effect:0 "§YUnlock feature:§! YHeat redirection\nAll mechanic units will work at §Y60% efficiency§! in §BArctic§, §BTundra§! and §BAlpine§! planets."
@@ -496,7 +496,7 @@
 
 	tech_machinerf_exotic:0 "Exotic world adaptation"
 	tech_machinerf_exotic_desc:1 "By equipping our units with polyvalent environmental protections, we can increase our performance on any kind of exotic world."
- 
+
 	tech_machinerf_exotic_effect:0 "Exotic World Machine Performance: §G+70%§!"
 
 
