--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -378,3 +378,8 @@ inorganic_breath_tooltip:2 "\n\n§HProduction tripled for ['concept_tec_effect_l
 concept_archaeostudies_desc: "- $tec_loc_hc_unlock_building$ ['building:building_archaeostudies_faculty']\n\n§L$tech_archaeostudies_desc$§!"
 
 concept_habitat_2_desc:1 "- $tec_loc_hc_unlock_building$ ['building:building_hab_major_capital']\n\n§L$tech_habitat_2_desc$§!"
+
+concept_planetary_government_desc: "- $tec_loc_hc_unlock_building$ ['building:building_capital']\n- $tec_loc_hc_unlock_building$ ['building:building_precinct_house']\n- $tec_loc_hc_unlock_building$ ['building:building_bureaucratic_1']\n\n§L$tech_planetary_government_desc$§!"
+
+
+concept_basic_science_lab_1_desc: "- $tec_loc_hc_unlock_building$ ['building:building_research_lab_1']\n\n§L$tech_basic_science_lab_1_desc$§!"
